# Banking

./: .gitignore  CMakeLists.txt  README.md  bank.h  bank_tests.cpp  main.cpp
_codeql_build_dir/: Banking  CMakeCache.txt  CTestTestfile.cmake  Makefile  bank_tests  bank_tests-b12d07c_include.cmake  bank_tests-b12d07c_tests.cmake  cmake_install.cmake
docs/: BACKEND.md  FRONTEND.md
sample_data/accounts/12345678/: statement.csv
sample_data/accounts/87654321/: statement.csv
src/: Bank.cpp  Bank.h  Constants.h  Transaction.h  WebServer.cpp  WebServer.h  main.cpp  web_main.cpp
